@@ -260,3 +260,7 @@ source_lang = ru
 [vacuum-im.spellchecker]
 file_filter = <lang>/spellchecker.ts
 source_lang = ru
+
+[vacuum-im.messagecarbons]
+file_filter = <lang>/messagecarbons.ts
+source_lang = ru
