@@ -1,0 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE TS>
+<TS version="2.0" language="en" sourcelanguage="en">
+<context>
+    <name>MessageCarbons</name>
+    <message>
+        <source>Message Carbons</source>
+        <translation>Message Carbons</translation>
+    </message>
+    <message>
+        <source>Allows to keep all user IM clients engaged in a conversation</source>
+        <translation>Allows to keep all user IM clients engaged in a conversation</translation>
+    </message>
+</context>
+</TS>
